--- a/exercicios/ex022/fundo02.html
+++ b/exercicios/ex022/fundo02.html
@@ -6,14 +6,33 @@
     <title>fundos</title>
     <style>
         body{
-            height: 95vh;
-            background-image: url(imagens/wallpaper003.jpg);
-            background-position: top left;
+            margin: 0px 0px 10px 0px;
+            height: 99vh;
+            background-image: url(imagens/wallpaper002.jpg);
+            background-position: center center;
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            
+        }
+
+        main{
+            margin: 10px auto 20px auto;
+            background-color: aliceblue;
+            padding: 10px;
+            max-width: 350px;
+            border-radius: 4px;
         }
 
     </style>
 </head>
 <body>
-    
+    <main>
+        <h1>Título</h1>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat iusto molestias dolorum dicta dolor omnis reiciendis temporibus expedita. Veniam nulla facilis, deserunt beatae ducimus laborum! Vel sit amet eum harum? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias ut esse iste, veritatis eum laborum itaque tempora, sit praesentium illo dignissimos deserunt cum tempore maxime, temporibus impedit. Tempora, labore culpa!
+        </p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptas, maiores ipsa, error doloremque suscipit aspernatur beatae ipsam quos officia impedit corrupti, ab tempora blanditiis eligendi? Nihil repudiandae quos consectetur quisquam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus repudiandae explicabo pariatur voluptate ducimus ex eligendi quisquam iusto. Explicabo consequuntur illum modi iusto laborum placeat! Itaque quo sed suscipit tempora. Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores suscipit numquam id delectus magnam laudantium asperiores aspernatur eum? Obcaecati velit ipsa doloribus aspernatur deserunt, omnis cumque sequi tenetur. Ex, libero!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam similique quos soluta minima culpa et laboriosam exercitationem, eveniet odio omnis porro nesciunt corporis voluptatum ab inventore perferendis doloremque dignissimos. Dolore. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem inventore, adipisci, minus dolorem harum, velit cupiditate rerum atque repudiandae in reprehenderit aut ipsum odio? Nisi suscipit quas ratione sint minima. Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, facere assumenda quisquam dolores distinctio libero aperiam reiciendis, voluptatibus quidem mollitia praesentium earum rerum dolorem deleniti iure totam suscipit voluptas velit? Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt illo in soluta, distinctio iusto deserunt, atque placeat obcaecati nostrum quos vitae id a repellat qui animi omnis. Reprehenderit, dolore earum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate rerum, unde officia aut corrupti quia consequatur odio recusandae quae, possimus fugiat, modi nihil. Excepturi quasi atque repudiandae natus ipsam cupiditate? Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima, temporibus ducimus! Tenetur eligendi quae cum magnam? Blanditiis tempore autem nihil, ipsum vel voluptates nam in magnam optio possimus repudiandae neque.</p>
+    </main>
 </body>
 </html>
