--- a/exercicios/ex022/fundo02.html
+++ b/exercicios/ex022/fundo02.html
@@ -8,11 +8,9 @@
         body{
             margin: 0px 0px 10px 0px;
             height: 99vh;
-            background-image: url(imagens/wallpaper002.jpg);
-            background-position: center center;
+           
+            background: black url(imagens/wallpaper002.jpg) center center no-repeat fixed;
             background-size: cover;
-            background-repeat: no-repeat;
-            background-attachment: fixed;
             
         }
 
